# authFace

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deploy.sh  uninstall.sh
.github/: FUNDING.yml
config/: face-auth.toml.example
crates/face-auth/: Cargo.toml
crates/face-auth-core/: Cargo.toml
crates/face-auth-core/src/: capture.rs  config.rs  error.rs  inference.rs  lib.rs  preprocess.rs  storage.rs  verify.rs
crates/face-auth/src/: main.rs
crates/face-enroll/: Cargo.toml
crates/face-enroll/src/: main.rs
pam/: gdm-password  sudo  swaylock
selinux/: face-auth.te
