[package]
name = "face-auth-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tract-onnx = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
byteorder = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.28", features = ["fs"] }
libc = "0.2"